feat: use profile=default on Special:Search
if not set, profile defaults to advanced, see https://github.com/wikimedia/mediawiki/blob/ddb43d3046dce6bda0ca27cbfaffc2418bd949bb/includes/specials/SpecialSearch.php#L322-L325

Refs https://github.com/OpenSemanticLab/docker-compose-osl-wiki/issues/48

--- a/templates/Search.mustache
+++ b/templates/Search.mustache
@@ -19,6 +19,7 @@
 		<span class="citizen-search__icon citizen-ui-icon mw-ui-icon-wikimedia-search"></span>
 		<form action="{{form-action}}" class="citizen-search__form" id="searchform" autocomplete="off">
 			<input type="hidden" name="title" value="{{page-title}}">
+			<input type="hidden" name="profile" value="default">
 			<label class="screen-reader-text" for="searchInput">{{msg-search}}</label>
 			{{{html-input}}}
 		</form>
